tests/paczka1/fuzzy1/37599718.err
Error in line 10: PCvUgALa S649 17,7
Error in line 17: lLln1MBQGk8 A728 46,3
Error in line 21: fNiLcAO S327 12,8
Error in line 28: fNiLcAO A742 74,9
Error in line 19: qTfz7aX S327 78,6
Error in line 32: qTfz7aX A742 73,9
